[gd_scene load_steps=16 format=2]

[ext_resource path="res://Map/Components/GoblinArt/GoblinFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://ToolNodes/DelayedRepeater.tscn" type="PackedScene" id=2]
[ext_resource path="res://ToolNodes/GroundDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://ToolNodes/AudioClipPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://ToolNodes/AudioClip.gd" type="Script" id=5]
[ext_resource path="res://Player/Audio/Walk_0.tres" type="Resource" id=6]
[ext_resource path="res://Player/Audio/Walk_1.tres" type="Resource" id=8]
[ext_resource path="res://Player/Audio/Hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://Map/Components/GroundEnemy.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 19.5 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 11, 20.5 )

[sub_resource type="Resource" id=53]
script = ExtResource( 5 )
clip = ExtResource( 10 )
volume = -15.0
pitch = 1.0

[sub_resource type="Curve" id=3]
max_value = 10.0
_data = [ Vector2( 0, 3.63636 ), 0.0, 41.398, 0, 0, Vector2( 0.283993, 9.45455 ), 0.0, 0.0, 0, 0, Vector2( 0.755594, 4.45455 ), -20.612, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.729825, 1 )
colors = PoolColorArray( 1, 1, 1, 0.631373, 0.760784, 0.760784, 0.760784, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=54]
resource_name = "Death"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[node name="Goblin" type="KinematicBody2D" groups=["Player"]]
collision_layer = 8
collision_mask = 2
collision/safe_margin = 2.0
script = ExtResource( 11 )
gravity = 1881.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -18.5 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Run"
frame = 2
playing = true
offset = Vector2( 4, -25 )

[node name="GroundDetector" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="GroundDetector" index="0"]
position = Vector2( 22, 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -18.5 )
shape = SubResource( 55 )

[node name="HurtPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 352, -463 )
current_clip = SubResource( 53 )

[node name="WalkPlayer" parent="." instance=ExtResource( 2 )]
current_clip = ExtResource( 6 )
delay = 0.8
audioclip_set = [ ExtResource( 6 ), ExtResource( 8 ) ]

[node name="WalkParticles" type="CPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
emitting = false
amount = 16
lifetime = 0.5
local_coords = false
gravity = Vector2( 0, -10 )
angle = -45.0
angle_random = 1.0
scale_amount = 1.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color = Color( 1, 1, 1, 0.368627 )
color_ramp = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 54 )

[editable path="GroundDetector"]
